# BITS-AI-ML

./: pyproject.toml
Assignment_MLP/src/: MLP_Model_from_scratch.ipynb
